# green-ndarray

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: test.yaml
src/: CMakeLists.txt
src/green/ndarray/: ndarray.h  ndarray_math.h  storage.h  string_utils.h
test/: CMakeLists.txt  common.h  ndarray_math_test.cpp  ndarray_storage_test.cpp  ndarray_test.cpp  tests_main.cpp
